--- a/gradle.properties
+++ b/gradle.properties
@@ -23,6 +23,9 @@ POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/ben-manes/stewseo/yelp-fusio
 POM_LICENSE_NAME=The Apache Software License, Version 2.0
 POM_LICENSE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENSE_DIST=repo
+POM_DESCRIPTION=java client that provides strongly typed requests and responses for all Yelp Fusion APIS. Handles http transport concerns, serializing to JSON and deserializing from JSON.
+
+LICENSE_NAME=The Apache License, Version 2.0
 
 DEV_ID=stewseo
 DEV_NAME=Stew seo
