--- a/gradle.properties
+++ b/gradle.properties
@@ -30,3 +30,5 @@ LICENSE_NAME=The Apache License, Version 2.0
 DEV_ID=stewseo
 DEV_NAME=Stew seo
 DEV_EMAIL=stewart.s.seo@gmail.com
+
+SONAR_HOST=https://sonarcloud.io
