--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx2500m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-#org.gradle.parallel=true
+org.gradle.parallel=true
+org.gradle.caching=true
 
-#org.gradle.caching=true
 #org.gradle.unsafe.configuration-cache=true
 #org.gradle.unsafe.configuration-cache-problems=warn
 #org.gradle.unsafe.configuration-cache.max-problems=5
