--- a/build-conventions/src/main/groovy/java-conventions.gradle
+++ b/build-conventions/src/main/groovy/java-conventions.gradle
@@ -9,6 +9,7 @@ plugins {
     id 'checkstyle'
     id 'idea'
     id 'com.github.spotbugs'
+    id 'integration-tests'
     id 'jacoco'
     id "org.sonarqube"
 }
@@ -70,7 +71,7 @@ tasks.withType(JavaCompile) {
 // No Warnings
 checkstyle {
     config = resources.text.fromString(io.github.stewseo.CheckstyleUtil.getCheckstyleConfig("$rootDir/config/checkstyle/checkstyle.xml"))
-    maxWarnings = 0
+//    maxWarnings = 0
 }
 
 /*****************************************************************************
