--- a/clients/build.gradle
+++ b/clients/build.gradle
@@ -7,6 +7,8 @@ plugins {
 //    id 'com.avast.gradle.docker-compose' version '0.14.3'
 }
 
+apply from: 'config/maven-publish/maven-publish.gradle'
+
 /*****************************************************************************
  *         java                                                             *
  *****************************************************************************/
