refactor FunctionalTest from clients/src/test to clients/src/integrationTest. Split into 2 separate integ tests. SearchBusinessesAndStoreTest.java and RequestBusinessDetailsAndStoreTest.java

--- a/build-conventions/src/main/groovy/integration-tests.gradle
+++ b/build-conventions/src/main/groovy/integration-tests.gradle
@@ -34,3 +34,16 @@ tasks.named('check') {
 dependencies {
     integrationTestImplementation project
 }
+
+repositories {
+    mavenCentral()
+}
+
+
+tasks.named('check') {
+    dependsOn(integrationTestTask)
+}
+
+dependencies {
+    integrationTestImplementation project
+}
