--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,6 +28,7 @@ github_username:  stewseo
 
 # Build settings
 theme: jekyll-clean-dark
+remote-theme: jekyll-clean-dark
 plugins:
   - jekyll-feed
   - jekyll-sitemap
