--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,15 +23,15 @@ email: stewart.s.seo.@gmailcom
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/yelp-fusion-client" # the subpath of your site, e.g. /blog
 url: "https://stewseo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: none
 github_username:  stewseo
 
 # Build settings
-theme: jekyll-clean-dark
+remote_theme: jekyll/minima
 plugins:
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-archives
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
